using UnityEngine;

public class AnimatorParameters
{
    public static readonly int VelocityX = Animator.StringToHash("VelocityX");
    public static readonly int VelocityZ = Animator.StringToHash("VelocityZ");
    public static readonly int AimHorizontal = Animator.StringToHash("AimHorizontal");
    public static readonly int AimVertical = Animator.StringToHash("AimVertical");
}
